Stop footer text overlapping with absolutely positioned div

--- a/_sass/components/_lists.scss
+++ b/_sass/components/_lists.scss
@@ -120,7 +120,7 @@
 
 .toolkits-section {
 	position: relative;
-	min-height: 55rem;
+	min-height: 57rem;
 }
 
 .toolkits-list {
